--- a/SimpsonsQuiz.html
+++ b/SimpsonsQuiz.html
@@ -22,10 +22,10 @@
   </div><!--end container-->
   <br />
   <div class="container answers">
-    <button class="choice" id="1"></button>
-    <button class="choice" id="2"></button>
-    <button class="choice" id="3"></button>
-    <button class="choice" id="4"></button>
+    <button style="cursor:pointer" class="choice" id="1"></button>
+    <button style="cursor:pointer" class="choice" id="2"></button>
+    <button style="cursor:pointer" class="choice" id="3"></button>
+    <button style="cursor:pointer" class="choice" id="4"></button>
     <br />
     <button class="next"></button>
   </div><!--end container-->
